# ece677

./: .gitignore  CMakeLists.txt  compile
hw2/: CMakeLists.txt  MatrixUtilities.h  MyTimer.cpp  matrix_multiply_main.cpp  mean_filter_main.cpp
hw4/: CMakeLists.txt  MatrixUtilities.h  MyTimer.h  matrix_multiply_main.cpp  mean_filter_main.cpp
scripts/: printTimes.sh  runHw2  runHw4  runMeanLocal.sh  subHw2.sh  subHw4.sh  sub_matrix.sh
scripts/archive/: runHw2.bak  runMatrixLocal.sh  sub_matrix.sh  sub_matrix.sh_orig  sub_matrix_02.sh  sub_matrix_04.sh  sub_matrix_08.sh  sub_matrix_16.sh  sub_matrix_32.sh  sub_matrix_64.sh  sub_matrix_b.sh  sub_mean.sh  sub_mean.sh_orig  sub_mean_02.sh  sub_mean_04.sh  sub_mean_08.sh  sub_mean_16.sh  sub_mean_32.sh  sub_mean_64.sh  sub_mean_b.sh
